# RustySchedule

./: README.md
rusty-schedule-app/: Cargo.toml
rusty-schedule-app-macro/: Cargo.toml
rusty-schedule-app-macro/src/: lib.rs
rusty-schedule-app/src/: args.rs  main.rs
rusty-schedule-app/src/tui/: input.rs  mod.rs  render.rs
rusty-schedule-core/: Cargo.toml
rusty-schedule-core/src/: lib.rs
