[package]
name = "rusty-schedule-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-schedule-core = { path = "../rusty-schedule-core" }
notify-rust = "4.10.0"
directories = "5.0.1"
clap = { version = "4.4.18", features = ["derive"] }
ratatui = { version = "0.26.0", optional = true }
crossterm = "0.27.0"
chrono = "0.4.33"
tui-textarea = { version = "0.4.0", optional = true }
tui-input = { version = "0.8.0", optional = true }

[features]
tui = [
    "dep:ratatui",
    "dep:tui-textarea",
    "dep:tui-input",
]

[profile.release]
strip = true
